# room_reservation

./: .gitignore  README.md  licence  pyproject.toml
core/: settings.py  urls.py
reservations/: admin.py  models.py  serializers.py  test_main.py  urls.py  views.py
reservations/migrations/: 0001_initial.py
reservations/tests/: conftest.py  test_integrations.py  test_model_clients.py  test_model_reservation.py  test_model_room.py  test_reservation_validations.py  test_room_availability.py  test_serializers.py  test_view_clients.py  test_view_register.py  test_view_reservation.py  test_view_room.py
